src/objects/Attendees__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <label>Purchase Source</label>
        <picklist>
            <picklistValues>
                <fullName>Box Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Official Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Ticket Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Admission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tickets_Purchased__c</fullName>
        <label>Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <formula>IF( ISPICKVAL(Ticket_Type__c, &quot;VIP&quot;),
    Tickets_Purchased__c * 100,
    Tickets_Purchased__c * 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Attendees</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restricao_na_compra_de_tickets</fullName>
        <active>true</active>
        <errorConditionFormula>Tickets_Purchased__c  &lt; 1  ||  Tickets_Purchased__c  &gt;  8</errorConditionFormula>
        <errorDisplayField>Tickets_Purchased__c</errorDisplayField>
        <errorMessage>Não é possivel comprar mais de 8 tickets ou valor negativo.</errorMessage>
    </validationRules>
</CustomObject>